pkl-core/src/test/files/LanguageSnippetTests/input/errors/analyzeInvalidHttpModule.pkl
import "pkl:analyze"

result = analyze.importGraph(Set("http://localhost:0/foo.pkl"))
